# demangle-gnuv2

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  results-netbabel.json
.github/workflows/: CI.yml  ci.yml  release.yml
demangle-gnuv2-py/: Cargo.toml  demangle_gnuv2.pyi  pyproject.toml
demangle-gnuv2-py/src/: lib.rs
doc/: test-cases
src/: lib.rs
test/: c2e-libc2e-syms.json  c2e-netbabel-syms.json  c2e-syms.json  test_demangle.py
