[package]
name = "demangle-gnuv2"
version = "0.1.0"
edition = "2024"
authors = ["Michael Gaver-Holmes <i.am@ceph3.us>"]
license = "LGPL-2.0+"
license-file = "COPYING"
description = "A structured demangler for the GNU v2 C++ mangling scheme"

[dependencies]
bitfield-struct = { workspace = true }
env_logger = "0.11.7"
log = "0.4.27"
memx = "0.1.32"
thiserror = { workspace = true }

[workspace]
members = ["demangle-gnuv2-py"]


[workspace.dependencies]
thiserror = "2.0.12"
bitfield-struct = "0.10.1"
