[package]
name = "demangle-gnuv2"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "A structured demangler for the GNU v2 C++ mangling scheme"

[dependencies]
anyhow = "1.0.98"
bitfield-struct = { workspace = true }
env_logger = "0.11.7"
log = "0.4.27"
memchr = "2.7.4"
thiserror = { workspace = true }

[workspace]
members = ["demangle-gnuv2-py"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Michael Gaver-Holmes <i.am@ceph3.us>"]
license = "LGPL-2.0+"
rust-version = "1.78"

[workspace.dependencies]
thiserror = "2.0.12"
bitfield-struct = "0.10.1"
