[package]
name = "demangle-gnuv2-py"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demangle_gnuv2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.2"
demangle-gnuv2 = { path = ".." }
